# movie-journal

./: Dockerfile  README.md  actors.py  docker-compose.yml  imdb_repository.py  linker.py  models.py  movie_journal.txt  movies.py  parse_imdb.py  parse_tsv_gzs_to_csv.py  parse_tsv_to_sqlite.py  parser.py  pyproject.toml  ratings.py  requirements.txt  runtime.py  table.py
parsers/: imdb.py  log.py
tests/: test_parsers_log.py
